--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,5 +21,14 @@
     <input type="text" placeholder="quote" name="quote">
     <button type="submit">Submit</button>
   </form>
+
+  <div>
+    <h2>Replace last quote emily with a quote written by Darth Vadar</h2>
+    <button id="update"> Darth Vadar invades! </button>
+  </div>
+
 </body>
+
+<script src="scripts.js"></script>
+
 </html>
