--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,11 @@
     <button id="update"> Darth Vadar invades! </button>
   </div>
 
+  <div>
+    <h2>Delete Darth Vadar's first quote</h2>
+    <button id="delete"> Delete first Darth Vadar quote </button>
+  </div>
+
 </body>
 
 <script src="scripts.js"></script>
