code and docs for react, webpack

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,8 +32,12 @@
     <button id="delete"> Delete first Darth Vadar quote </button>
   </div>
 
+  <div id="root">
+    <h1>hello world!</h1>
+  </div>
+
 </body>
 
-<script src="scripts.js"></script>
+<script src="/dist/bundle.js"></script>
 
 </html>
